# TinkerDexSo

./: README.md
JNIDemo/app/: CMakeLists.txt  build.gradle
JNIDemo/app/src/androidTest/java/com/jni/demo/: ExampleInstrumentedTest.java
JNIDemo/app/src/main/: AndroidManifest.xml
JNIDemo/app/src/main/cpp/: aes.cpp  ase.h  logger.h  native-lib.cpp
JNIDemo/app/src/main/java/com/jni/demo/: MainActivity.java
JNIDemo/app/src/main/res/layout/: activity_main.xml
JNIDemo/app/src/test/java/com/jni/demo/: ExampleUnitTest.java
MyUpxDemo/app/: build.gradle
MyUpxDemo/app/src/androidTest/java/com/demo/my/: ExampleInstrumentedTest.java
MyUpxDemo/app/src/main/: AndroidManifest.xml
MyUpxDemo/app/src/main/java/android/Log/: MyLogImp.java
MyUpxDemo/app/src/main/java/android/app/: BaseBuildInfo.java  BuildInfo.java  MainActivity.java  SampleApplicationLike.java
MyUpxDemo/app/src/main/java/android/crash/: SampleUncaughtExceptionHandler.java
MyUpxDemo/app/src/main/java/android/reporter/: SampleLoadReporter.java  SamplePatchListener.java  SamplePatchReporter.java  SampleTinkerReport.java
MyUpxDemo/app/src/main/java/android/service/: SampleResultService.java
MyUpxDemo/app/src/main/java/android/util/: SampleApplicationContext.java  TinkerManager.java  UpgradePatchRetry.java  Utils.java
MyUpxDemo/app/src/main/java/com/demo/my/: JNITest.java  MainActivity.java
MyUpxDemo/app/src/main/res/layout/: activity_main.xml  activity_main_tinker.xml
MyUpxDemo/app/src/main/res/values/: strings.xml
MyUpxDemo/app/src/test/java/com/demo/my/: ExampleUnitTest.java
UpxDemo/app/: CMakeLists.txt  build.gradle
UpxDemo/app/src/androidTest/java/com/demo/upx/: ExampleInstrumentedTest.java
UpxDemo/app/src/main/: AndroidManifest.xml
UpxDemo/app/src/main/cpp/: array_c.cpp  array_c.h  logger.h  native-lib.cpp
UpxDemo/app/src/main/java/com/demo/upx/: MainActivity.java
UpxDemo/app/src/main/res/layout/: activity_main.xml
UpxDemo/app/src/main/res/values/: strings.xml
UpxDemo/app/src/test/java/com/demo/upx/: ExampleUnitTest.java
jni/: Android.mk  demo1.c
